<resources>
    <string name="app_name">AtmoSphere</string>
    <string name="hello_blank_fragment">App</string>
    <string name="thrid_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="first_screen">First Screen</string>
    <string name="main_text">AtmoSphere</string>
    <string name="finish_button">Finish</string>
    <string name="next_button">Next</string>
    <string name="show_weather_button">Show Weather</string>
    <string name="get_location_activity">Your Geolocation</string>
    <string name="user_location_fragment">User Location Fragment</string>
    <string name="splash_text">Always stay updated on the weather!</string>
    <string name="firstscreendesk">Get precise, timely weather forecast anywhere.\nEasily plan your week\nwith our 7-day forecast</string>
    <string name="secondscreendesk">Stay ahead of the weather with hourly updates\nfor safety and comfort</string>
    <string name="firstscreenslogan">Weather under control \n- every day, every hour</string>
    <string name="today_title">Today</string>
    <string name="next_7_days_title">Next 7 days</string>
    <string name="hint_edittext">Enter the name of a city</string>
    <string name="your_geolocation">Your Geolocation</string>
    <string name="or">or</string>
    <string name="rain">Rain</string>
    <string name="nextDayWindKm">%skm/h</string>
    <string name="chosenDayWindKm">%skm/h</string>
    <string name="windKm">%skm/h</string>
    <string name="feelinglike">Feeling like %s°</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humiditypercent">%s%%</string>
    <string name="nextDayHumiditypercent">%s%%</string>
    <string name="chosenDayHumiditypercent">%s%%</string>
    <string name="humidity">Humidity</string>
    <string name="dailyChanceOfRain">%s%%</string>
    <string name="nextDayDailyChanceOfRain">%s%%</string>
    <string name="chosenDayDailyChanceOfRain">%s%%</string>
    <string name="currentDayHourTemp">%s°</string>
    <string name="chosenDayHourTemp">%s°</string>
    <string name="futureDayMaxTemp">%s°</string>
    <string name="futureDayMinTemp">%s°</string>
    <string name="nextDayMaxTemp">day: %s°</string>
    <string name="chosenDayMaxTemp">day: %s°</string>
    <string name="chosenDateTemp">day: %s°</string>
    <string name="nextDayMinTemp">night: %s°</string>
    <string name="chosenDayMinTemp">night: %s°</string>
    <string name="chosenDateMinTemp">night: %s°</string>
    <string name="_7_day_forecast">7-day forecast</string>
    <string name="noConnection">No Internet Connection\nThe weather forecast data may be outdated</string>
    <string name="failedToConnect">Failed to connect to the internet</string>
    <string name="tryAgainButton">Try Again</string>
    <string name="successConnection">The weather forecast data successfully updated</string>
    <string name="search_weather">Search Weather</string>
    <string name="emptyEditText">Please enter the name of the city to get the weather forecast</string>
    <string name="failedToGetWeather">Failed to retrieve the weather forecast. Please check the data you entered and your internet connection</string>
    <string name="failedToGetGeoLocation">Location access denied.\nEnter the name of the city manually</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="backtocurrentdaybutton">backToCurrentDayButton</string>
    <string name="rainicon">rainIcon</string>
    <string name="windicon">windIcon</string>
    <string name="humicon">humIcon</string>
    <string name="backtonextdaysbutton">backToNextDaysButton</string>
    <string name="menu">menu</string>
    <string name="days">Days</string>
    <string name="day_night">Day/Night</string>
    <string name="nowHour">Now</string>
    <string name="policyicon">policyIcon</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="descprivacy">Before you start using the app, please familiarize yourself with our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="i_accept_privacy_policy_terms_of_use"><![CDATA[I accept Privacy Policy & Terms of Use]]></string>
    <string name="i_understand">I understand</string>
    <string name="privacy_policy_win">Privacy Policy</string>
    <string name="_1_introduction">1. Introduction</string>
    <string name="introductiondecs">Thank you for using the AtmoSphere app! We are committed to protecting your personal information and privacy. This Privacy Policy outlines how we collect, use, process, and protect the information of our app users.</string>
    <string name="_2_information_collection">2. Information Collection</string>
    <string name="information_collectiondesc">When using AtmoSphere, we may collect the following data:</string>
    <string name="information_collectiondesc2">Geolocation Data: to provide accurate weather forecasts. Usage Data: to improve app functionality and interface..</string>
    <string name="_3_use_of_information">3. Use of Information</string>
    <string name="_3_use_of_informationdesc">The collected information is used to:\nProvide and enhance the weather forecast service.\nConduct research and analysis to improve the app.</string>
    <string name="_4_disclosure_of_information">4. Disclosure of Information</string>
    <string name="_4_disclosure_of_informationdesc">We do not sell, trade, or transfer your personal data to third parties</string>
    <string name="_5_security">5. Security</string>
    <string name="_5_securitydesc">We take measures to protect your information from unauthorized access, alteration, disclosure, or destruction</string>
    <string name="_6_changes_to_the_privacy_policy">6. Changes to the Privacy Policy</string>
    <string name="_6_changes_to_the_privacy_policydesc">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Policy on this page</string>
    <string name="_7_contact_information">7. Contact Information</string>
    <string name="_7_contact_informationdesc">If you have any questions about our Privacy Policy, please contact us at kanatbayalbayev@gmail.com</string>
    <string name="_title">Terms of Use</string>
    <string name="_1_introductionterms">Welcome to the AtmoSphere app! These Terms of Use govern your access to and use of our weather forecast application. By using the AtmoSphere app, you agree to these Terms. If you do not agree with the Terms, please do not use the app.</string>
    <string name="_2_use_of_data">2. Use of Data</string>
    <string name="_2_use_of_dataterms">AtmoSphere app provides weather forecasts and related data. We strive for accuracy but cannot guarantee 100% precision of the information provided.Its use is at your own risk.</string>
    <string name="_3_intellectual_property">3. Intellectual Property</string>
    <string name="_3_intellectual_propertydesc">All rights, including copyrights and trademarks of the AtmoSphere app, belong to us or our licensors. All materials contained in the app are protected by copyright.</string>
    <string name="_4_restrictions_on_use">4. Restrictions on Use</string>
    <string name="_4_restrictions_on_usedesc">You agree not to use the AtmoSphere app for illegal activities, not to copy or modify the app, its content, or functionality.</string>
    <string name="_5_disclaimer_of_liability">5. Disclaimer of Liability</string>
    <string name="_5_disclaimer_of_liabilitydesc">We are not liable for any direct or indirect losses resulting from the use or inability to use the app.</string>
    <string name="_6_changes_to_the_terms_of_use">6. Changes to the Terms of Use</string>
    <string name="_6_changes_to_the_terms_of_useterms">We reserve the right to change these Terms at any time. Your continued use of the app following such changes will indicate your agreement with the new Terms.</string>
    <string name="_7_contact_informationterms">If you have any questions about our Terms of Use, please contact us at kanatbayalbayev@gmail.com.</string>
</resources>